dev/settings/settingspageanimation.css
setting-pages, #settings_view {
	transition: transform 0.25s cubic-bezier(.7, 0, .6, 1);
}

.settingspage_animateable_title {
	transition: transform 0.3s cubic-bezier(.4, 0, .2, 1);
	z-index: 1;
}

section-settings {
	position: relative;
}

setting-pages[animating] #setting_page_header {
	position: absolute;
	left: 0px !important;
	top: 0px !important;
}

